--- a/trainer/pom.xml
+++ b/trainer/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>nl.hu.bdsd</groupId>
-  <artifactId>kafka-trainer</artifactId>
+  <artifactId>kafka-consumer</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>kafka-trainer</name>
+  <name>kafka-consumer</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,11 +23,17 @@
       <artifactId>kafka-clients</artifactId>
       <version>2.2.0</version>
     </dependency>
-    <!-- <dependency>
+    <dependency>
         <groupId>org.apache.kafka</groupId>
         <artifactId>kafka_2.12</artifactId>
         <version>2.2.1</version>
-    </dependency> -->
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -78,7 +84,7 @@
                       <manifest>
                           <addClasspath>true</addClasspath>
                           <classpathPrefix>${project.build.finalName}.lib/</classpathPrefix>
-                          <mainClass>nl.hu.bdsd.BDSDKafkaTrainerRunner</mainClass>
+                          <mainClass>nl.hu.bdsd.BDSDKafkaConsumerRunner</mainClass>
                       </manifest>
                   </archive>
               </configuration>
